k8s/deployment-deviceservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deviceservice
  namespace: uav-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deviceservice
  template:
    metadata:
      labels:
        app: deviceservice
    spec:
      containers:
        - name: deviceservice
          image: registry.digitalocean.com/REPLACE_REGISTRY/deviceservice:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
