k8s/deployment-userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: uav-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: registry.digitalocean.com/REPLACE_REGISTRY/userservice:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
