k8s/service-alertservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertservice
  namespace: uav-system
spec:
  selector:
    app: alertservice
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
