k8s/service-deviceservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: deviceservice
  namespace: uav-system
spec:
  selector:
    app: deviceservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
