k8s/service-ingestionservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestionservice
  namespace: uav-system
spec:
  selector:
    app: ingestionservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
