k8s/service-logservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: logservice
  namespace: uav-system
spec:
  selector:
    app: logservice
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
