k8s/service-userservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: uav-system
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
